Revision history for Pod-Manual

0.08_02 10 Dec 2008
    - Added Pod::2::DocBook as dependency

0.08_01 7 Dec 2008
    - Added Prince PDF generator
    - Moved author tests to xt
    - Moved git repository to Github

0.08 18 Dec 2007
    - The title of the manual now default to the shortened title
        of the first added chapter.
    - Addition of a command-line utility: podmanual.

0.07  17 Nov 2007
    - The CPAN indexer is not appreciating my switch to X.YY.ZZ notation.
      *sigh*

0.06.01 17 Nov 2007
    - Don't run tests using pdflatex if is root, for security
        reasons (bug #30051).
    - Added 'rose-db-object.pl' in the examples.
    - Author tests are now run only if 'Pod::Manual' is contained
        in environment variable TEST_AUTHOR.
    - The test generating a pdf file in t/01general.t now
        cleans after itself and deletes the pdf.
    - Module is now signed.

0.06 18 Jul 2007
    - Changed test 01general for that it doesn't hang on different pdflatex.

0.05 17 Jul 2007
    - Added XML::LibXML dependency.
    - Added method add_chapters().

0.04  16 Jul 2007
    - Added Pod::XML dependency.

0.03 15 Jul 2007
    - Removed dependency on Pod::DocBook.

0.02  14 Jul 2007  
    - Added examples/ dir and catalyst_manual.pl.
    - Added method as_latex() to Pod::Manual.
    - Filled in README.
    - Added Makefile.Pl support.

0.01   6 Jul 2007 
    - Initial release.
